# life_network_data_pipeline

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  hello_world.py  prefect.yaml  pyproject.toml  requirements.txt  sql_database_pipeline.py
.dlt/: config.toml
.github/workflows/: deploy-prefect.yml
flows/: attachments_flow.py  bigquery_export.py  cad_import.py  daily_import.py  dbt.py  email.py  evidence.py  export_batches.py  generate_pay_period_schedule.py  messaging.py  schedule_flows.py  schedule_reports.py
lan_dbt/: dbt_project.yml  package-lock.yml  packages.yml  profile.yml  profiles.yml
lan_dbt/macros/: 5wk_demand_chart.sql  get_valid_cost_centers.sql
lan_dbt/models/analytics/: demand_forecast_analysis.sql  demand_forecast_diagnostics.sql  schema.yml
lan_dbt/models/analytics/runs/: attachment_compliance.sql  epcr_qa_export_recon.sql  methodist_memphis_on_time_performance.sql  methodist_memphis_otp_7day_ma.sql  otp.sql  time_on_task_daily.sql  time_on_task_run_metrics.sql  time_on_task_shift_runs.sql  va_pay_list.sql
lan_dbt/models/analytics/scheduling/: crew_efficiency_weekly.sql  pay_period_crew_report.sql  pay_period_shift_report.sql  sched_hours.sql  schema.yml  shift_assignments.sql  (+6 more)
lan_dbt/models/bigquery/: bq_attachment_compliance.sql  bq_runs.sql  bq_shifts.sql  bq_users.sql  daily_dashboard.sql  schema.yml  v_daily_operations.sql
lan_dbt/models/predictions/: demand_forecast.sql  schema.yml  source.yml
lan_dbt/models/staging/: source.yml
lan_dbt/seeds/: pay_periods.csv
lan_dbt/tests/: warn_invalid_run_timestamps.sql
(+23 files in other folders)
