[project]
name = "life-network-data-pipeline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dbt>=1.0.0.40.5",
    "dbt-core>=1.10.3",
    "dbt-postgres>=1.9.0",
    "dlt[postgres]>=1.12.3",
    "nats-py>=2.11.0",
    "pre-commit>=4.2.0",
    "prefect-dbt>=0.7.4",
    "prefect-shell>=0.3.1",
    "prefect[github]>=3.4.7",
    "pymysql>=1.1.1",
]
